# magic-studio

./: .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  .prettierignore  AGENTS.md  ARCHITECT.md  ARCHITECTURE_COMPLIANCE.md  ARCHITECTURE_FIXES.md  BUSINESS_PACKAGES_PROGRESS.md  CIRCULAR_DEPENDENCY_FIX_REPORT.md  CORE_PACKAGES_COMPLETE.md  CORE_PACKAGES_FINAL_REPORT.md  Cargo.toml  FINAL_FIX_REPORT.md  FINAL_PROGRESS_REPORT.md  FINAL_PROGRESS_REPORT_V2.md  FINAL_PROGRESS_REPORT_V3.md  FINAL_PROGRESS_REPORT_V4.md  FINAL_PROGRESS_SUMMARY.md  FINAL_REPORT_COMPLETE.md  FIX_PLAN.md  FIX_PROGRESS_REPORT.md  FIX_REPORT_GEMINI.md  FIX_SUMMARY_REPORT.md  ISSUES.md  PACKAGES_FIX_REPORT.md  PROGRESS_REPORT_2.md  PROGRESS_REPORT_3.md  PROGRESS_REPORT_4.md  PROGRESS_REPORT_5.md  QWEN.md  README.md  RUNTIME_INJECTION_CONFIG.md  TYPE_FIX_PLAN.md  build_errors.txt  eslint.config.js  fix-encoding.mjs  (+25 more)
docs/: 2026-04-03-agi-native-standard-audit.md  INDEX.yaml  README.md  agi-native-unified-application-standard.md  architect-react+capacitor.md  architect-react+tauri copy.md  architect-react+tauri.md  architect-standard-react+backend.md  architect-standard-react+capacitor.md  architect-standard-react+tauri.md  asset-center-business-migration.md  asset-center-high-standard-spec.md  asset-center-package-plan.md  asset-center-unified-architecture.md  framework-standard-architecture.md  local-media-toolkit-architecture.md  magic-studio-api-capability-matrix.md  magic-studio-api-route-catalog.md  magic-studio-unified-host-api-standard.md  package-routing-system.md  platform-runtime-capability-matrix.md  prompt.md  tauri-industry-desktop-capability-blueprint.md  tauri-rust-framework-architecture.md
prompt/: execute.md
scripts/: app-mode.mjs  audit-service-encapsulation.mjs  check-desktop-bundle-self-contained.mjs  check-release-api-target.mjs  check-service-policy-review-gate.mjs  prepare-git-sdk-sources.mjs  run-app-build.mjs  run-vite-dev.mjs  run-vitest-safe.mjs  sdk-mode.mjs  service-encapsulation-policy.mjs  validate-service-encapsulation-policy.mjs  zip-project.mjs
specs/: README.md  component.spec.json
src/: index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json
src-tauri/specs/: README.md  component.spec.json
src-tauri/src/: browser.rs  embedded_server.rs  main.rs
src-tauri/src/commands/: browser_commands.rs  compression_commands.rs  database_commands.rs  filesystem_commands.rs  job_commands.rs  media_commands.rs  migration_commands.rs  mod.rs  policy_commands.rs  pty_commands.rs  system_commands.rs  toolkit_commands.rs
src-tauri/src/events/: mod.rs
src-tauri/src/framework/: appearance_bootstrap.rs  context.rs  error.rs  mod.rs  runtime.rs
src-tauri/src/framework/services/: browser.rs  compression.rs  database.rs  filesystem.rs  jobs.rs  media.rs  migration.rs  mod.rs  policy.rs  pty.rs  system.rs  toolkit.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/shell/: mod.rs  pty.rs  session.rs
src-tauri/src/shell/commands/: mod.rs  pty.rs  system.rs
tests/: appEntryFocusedSubpathBoundary.node.test.mjs  assetChooserCodeSplit.node.test.mjs  assetsCenterFoundationBoundary.node.test.mjs  assetsConsumerSubpathBoundary.node.test.mjs  assetsFeatureSubpathBoundary.node.test.mjs  assetsFocusedSdkClientBoundary.node.test.mjs  assetsPackageExports.node.test.mjs  assetsRootEntryBoundary.node.test.mjs  authDesktopWindowControls.node.test.mjs  authHostVisualParity.node.test.mjs  authLayoutParity.node.test.mjs  authLegacyReferenceCleanup.node.test.mjs  authLocalComposition.node.test.mjs  authLoginRuntimeStability.node.test.mjs  authSharedUiParity.node.test.mjs  authTailwindCompilation.node.test.mjs  authZhCnLocale.node.test.mjs  canvasAssetsSubpathBoundary.node.test.mjs  canvasEntityKeyTypecheck.node.test.mjs  chatConsumerSubpathBoundary.node.test.mjs  chatVipFeatureSubpathBoundary.node.test.mjs  checkDesktopBundleSelfContained.test.ts  checkSdkModeParity.test.ts  checkTauriEmbeddedAssets.test.ts  desktopPlatformHttpFallback.node.test.mjs  desktopShellCapabilityBoundary.node.test.mjs  driveAssetsSubpathBoundary.node.test.mjs  editorDriveConsumerSubpathBoundary.node.test.mjs  editorDriveFeatureSubpathBoundary.node.test.mjs  filmAssetsSubpathBoundary.node.test.mjs  gitSdkPreparationPolicy.node.test.mjs  githubWorkflowIntegration.node.test.mjs  i18nHookStability.node.test.mjs  i18nLazyBootstrapBoundary.node.test.mjs  (+112 more)
(+1253 files in other folders)
