[workspace]
resolver = "2"
members = [
    "apps/sdkwork-magic-studio-v2-pc/packages/sdkwork-magic-studio-server/src-host",
    "apps/sdkwork-magic-studio-v2-pc/packages/sdkwork-magic-studio-server/sdkwork-ai-sdk-rust",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# SDKWork workspace members - declared once at workspace root
sdkwork-magic-studio-server = { path = "apps/sdkwork-magic-studio-v2-pc/packages/sdkwork-magic-studio-server/src-host" }
sdkwork-ai-sdk = { path = "apps/sdkwork-magic-studio-v2-pc/packages/sdkwork-magic-studio-server/sdkwork-ai-sdk-rust" }
# SDKWork platform crates
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
