
[package]
name = "magic-studio"
version = "0.1.0"
description = "A cross-platform terminal application"
authors = ["SDKWork"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["unstable"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-updater = "2.7.0"
tauri-plugin-http = "2.4.0"
tauri-plugin-window-state = "2.2.0"
tauri-plugin-log = "2.3.0"
tauri-plugin-single-instance = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
zip = { version = "0.6", features = ["deflate"] }
walkdir = "2.4"
url = "2.5"
rusqlite = { version = "0.31", features = ["bundled"] }
